// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should be rendered correctly 1`] = `
<label
  className="uui-switch container root uui-size-18 uui-color-primary -clickable"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={false}
      checked={false}
      onChange={[Function]}
      role="switch"
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
</label>
`;

exports[`Switch should be rendered correctly with maximum props 1`] = `
<label
  className="uui-switch container root uui-size-18 uui-color-primary uui-disabled uui-readonly"
>
  <div
    className="uui-switch-body"
  >
    <input
      aria-checked={false}
      aria-disabled={true}
      aria-readonly={true}
      checked={false}
      disabled={true}
      readOnly={true}
      required={true}
      role="switch"
      type="checkbox"
    />
    <div
      className="uui-switch-toggler"
    />
  </div>
  <div
    className="uui-input-label"
  >
    Open
  </div>
</label>
`;
